--- a/Styles/main.css
+++ b/Styles/main.css
@@ -141,6 +141,27 @@ body {
 	fill: #fff;
 }
 
+/* Backdrop */
+.backdrop {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	pointer-events: none;
+	user-select: none;
+	z-index: 1;
+}
+
+.backdrop__message {
+	font-size: 8vmin;
+	text-align: center;
+	color: rgba(255, 255, 255, 0.5);
+}
+
 /* Notifier */
 .notifier {
 	position: fixed;
